# People-Counting-v2

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  endpoints.py  functions.py  job_store.py  jobs.db  main.ipynb  main.py  pyproject.toml  requirements.txt  test_stream.py  training.py  worker.py
data/: jobs.db
static/: guide.html  index.html  script.js  style.css
