[project]
name = "people-counting-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.2",
    "ipywidgets>=8.1.8",
    "lap>=0.5.12",
    "numpy>=2.3.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "sahi>=0.11.36",
    "supervision>=0.27.0",
    "ultralytics",
    "uvicorn>=0.38.0",
    "yt-dlp>=2025.12.8",
]

[tool.uv.sources]
ultralytics = { git = "https://github.com/ultralytics/ultralytics.git" }
